Fix z-index on header
Buttons would float above it while scrolling.

--- a/_sass/components/_header.sass
+++ b/_sass/components/_header.sass
@@ -9,6 +9,7 @@
 
   background-color: #FFF
   box-shadow: 0px 0px 3px #b5b5b5
+  z-index: 100
 
   a
     text-decoration: none
